<package format="2">
	<name>handling_msgs</name>
	<description>
		handling_msgs
	</description>

	<author>Philip</author>
	<license>BSD</license>

	<url>http://ros.org/wiki/404</url>

	<version>1.0.0</version>
	<maintainer email="TODO@TODO.DE">TODO</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_export_depend>message_runtime</build_export_depend>
	<exec_depend>message_runtime</exec_depend>
	
	  	
	<depend>std_msgs</depend>
	<depend>moveit_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>actionlib_msgs</depend>

</package>


